Fix code block overflow

--- a/src/components/BlogCard.module.css
+++ b/src/components/BlogCard.module.css
@@ -51,7 +51,3 @@
   text-align: center;
   margin-left: auto;
 }
-
-.image {
-  height: 30em;
-}
