--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -15,3 +15,8 @@ footer {
   font-size: smaller;
   background: #eee;
 }
+
+.grvsc-container {
+  width: 80vw;
+  height: auto;
+}
